# pico-synth

./: .gitignore  CMakeLists.txt  LICENSE  README.md  controller.c  main.c  note.c  oscillator.c  phase.c  synth.c  usb.c  waveform.c
.github/workflows/: dist.yml  kicad.yaml
3d-models/: enclosure.scad  enclosure.stl  led-holder.scad  led-holder.stl
data/: notes.h  waveforms.h
ec11/: ec11.c
eeprom-i2c/: eeprom-i2c.c
eeprom-i2c/include/: eeprom-i2c.h
firmware/: CMakeLists.txt  channel.c  channel.h  eeprom-types.h  generate.py  main.c  midi-impl.c  midi-notif.c  midi-notif.h  openocd.cfg  screen-main.c  screen-main.h  screen-settings-channel-midi.c  screen-settings-channel-midi.h  screen-settings-channel-preset.c  screen-settings-channel-preset.h  screen-settings-channel.c  screen-settings-channel.h  screen-settings-channels.c  screen-settings-channels.h  screen-settings-eeprom-erase.c  screen-settings-eeprom-erase.h  screen-settings-eeprom-error.c  screen-settings-eeprom-error.h  screen-settings-eeprom-saving.c  screen-settings-eeprom-saving.h  screen-settings-eeprom-updating.c  screen-settings-eeprom-updating.h  screen-settings-preset-adsr-attack.c  screen-settings-preset-adsr-attack.h  screen-settings-preset-adsr-decay.c  screen-settings-preset-adsr-decay.h  screen-settings-preset-adsr-release.c  screen-settings-preset-adsr-release.h  screen-settings-preset-adsr-sustain.c  screen-settings-preset-adsr-sustain.h  screen-settings-preset-waveform.c  screen-settings-preset-waveform.h  screen-settings-preset.c  screen-settings-preset.h  (+16 more)
firmware/data/: notes.h  waveforms.h
firmware/ec11/: CMakeLists.txt
firmware/ec11/include/: ec11.h
firmware/eeprom-i2c/: CMakeLists.txt  eeprom-i2c.c
firmware/engine/: CMakeLists.txt  driver-mcp4822-data.h  driver-mcp4822.c  driver-mcp4822.h  driver-mcp4822.pio  engine-data.h  engine.c  module-adsr-data.h  module-adsr.c  module-amplifier.c  module-mixer.c  module-oscillator-data.h  module-oscillator.c  note-data.h  note.c  phase.c
firmware/engine/include/pico-synth/: engine.h
firmware/engine/include/pico-synth/engine/: module-adsr.h  module-amplifier.h  module-mixer.h  module-oscillator.h
firmware/include/: note.h  oscillator.h  synth.h  waveform.h
firmware/mcp4822/: CMakeLists.txt
firmware/midi/: CMakeLists.txt  driver-uart.c  driver-uart.h  driver-usb.c  driver-usb.h  midi.c  usb_descriptors.c
firmware/midi/include/: midi.h  tusb_config.h
firmware/midi/include/pico-synth/: midi.h
firmware/oled-tui/: CMakeLists.txt  font.h  oled-tui-menu.c
firmware/oled-tui/include/: oled-tui-menu.h  oled-tui.h
firmware/tools/: gen_notes.py  gen_waveforms.py
firmware/tui/: CMakeLists.txt  driver-ec11.c  driver-ec11.h  driver-eeprom.c  driver-eeprom.h  driver-oled-font.c  driver-oled.c  driver-oled.h  screen.c  screen.h  tui.c
firmware/tui/include/pico-synth/: tui.h
include/: controller.h  note.h  oscillator.h  phase.h  synth.h  waveform.h
mcp4822/: mcp4822.c  mcp4822.pio
mcp4822/include/: mcp4822.h
midi/: midi.c
oled-tui/: oled-tui.c
oled-tui/include/: oled-tui.h
pcb/: fp-lib-table  pico-synth-cache.lib  pico-synth.kicad_pcb  pico-synth.kicad_prl  pico-synth.kicad_pro  pico-synth.kicad_sch  pico-synth.pro  pico-synth.sch  sym-lib-table
pcb/lib/: LICENSE  MCU_RaspberryPi_and_Boards.kicad_sym  TLV272.kicad_sym
pcb/lib/Connector_JST_with_PinSocket.pretty/: JST_XH_B2B-XH-A_PinSocket_1x02_P2.50mm_Vertical.kicad_mod  JST_XH_B3B-XH-A_PinSocket_1x03_P2.50mm_Vertical.kicad_mod  JST_XH_B4B-XH-A_PinSocket_1x04_P2.50mm_Vertical.kicad_mod  JST_XH_B5B-XH-A_PinSocket_1x05_P2.50mm_Vertical.kicad_mod
pcb/libraries/: TLV272.kicad_sym
ssd1306/: CMakeLists.txt  ssd1306.c  ssd1306_font.h
ssd1306/include/: ssd1306.h
tools/: gen_notes.py  gen_waveforms.py
